Style collection and group modals

--- a/sled_collections/templates/sled_collections/collection_ask_access.html
+++ b/sled_collections/templates/sled_collections/collection_ask_access.html
@@ -11,7 +11,7 @@ Ask private object owners for access?
 
 
 {% block action_button %}
-<button type="submit" class="btn btn-sm btn-danger">
+<button type="submit" class="jb-submit-button-1">
   Ask access
 </button>
 {% endblock action_button %}
