--- a/sled_collections/templates/sled_collections/collection_delete.html
+++ b/sled_collections/templates/sled_collections/collection_delete.html
@@ -7,12 +7,12 @@ Delete collection
 
 
 {% block content %}
-<div>
+<div class="jb-container">
   Are you sure you want to delete the collection named <strong>{{ collection.name }}</strong>?
 </div>
 {% endblock content %}
 
 
 {% block action_button %}
-<button type="submit" class="btn btn-danger">Delete</button>
+<button type="submit" class="jb-submit-button-1">Delete</button>
 {% endblock action_button %}
