--- a/sled_collections/templates/sled_collections/collection_update.html
+++ b/sled_collections/templates/sled_collections/collection_update.html
@@ -22,5 +22,5 @@ Update collection {{ collection.name }}
 
 
 {% block action_button %}
-<button type="submit" class="btn btn-sm btn-primary">Update</button>
+<button type="submit" class="jb-submit-button-1">Update</button>
 {% endblock action_button %}
