--- a/sled_groups/templates/sled_groups/group_delete.html
+++ b/sled_groups/templates/sled_groups/group_delete.html
@@ -7,8 +7,10 @@ Delete group
 
 
 {% block content %}
-<div>
-  Are you sure you want to delete the group named <strong>{{ group.name }}</strong>?
+<div class="jb-container">
+  <div>
+    Are you sure you want to delete the group named <strong>{{ group.name }}</strong>?
+  </div>
 </div>
 {% endblock content %}
 
