--- a/sled_users/templates/sled_users/user_index.html
+++ b/sled_users/templates/sled_users/user_index.html
@@ -46,7 +46,7 @@
     </div>
   </div>
 
-  <button type="button" class="sled-modal btn btn-sm btn-primary jb-submit-button-1" data-form-url="{% url 'sled_users:user-update' user.pk %}">
+  <button type="button" class="jb-submit-button-1" data-form-url="{% url 'sled_users:user-update' user.pk %}">
     <img src="{% static 'icons/pencil.svg' %}" alt="pencil">
     Update
   </button>
