--- a/sled_users/templates/sled_users/user_update.html
+++ b/sled_users/templates/sled_users/user_update.html
@@ -22,7 +22,7 @@ Update your information
 
 
 {% block action_button %}
-<button type="submit" class="btn btn-sm btn-primary">
+<button type="submit" class="btn btn-sm btn-primary jb-submit-button-1">
   Update
 </button>
 {% endblock action_button %}
