--- a/sled_groups/templates/sled_groups/group_cede_ownership.html
+++ b/sled_groups/templates/sled_groups/group_cede_ownership.html
@@ -8,18 +8,20 @@ Cede ownership of group {{ sledgroup.name }}?
 {% block content %}
 <input type="hidden" id="Urlusers" data-url="{% url 'api:users-view' %}" />
 
-<div class="{% if form.non_field_errors %}invalid{% endif %}">
-  {% for error in form.non_field_errors %}
-  {{ error }}
-  {% endfor %}
-</div>
+<div class="jb-container">
+  <div class="{% if form.non_field_errors %}invalid{% endif %}">
+    {% for error in form.non_field_errors %}
+    {{ error }}
+    {% endfor %}
+  </div>
 
-<div>
-  {{ form.heir }}
-</div>
+  <div>
+    {{ form.heir }}
+  </div>
 
-<div>
-  {{ form.justification }}
+  <div>
+    {{ form.justification }}
+  </div>
 </div>
 {% endblock content %}
 
