--- a/sled_groups/templates/sled_groups/group_leave.html
+++ b/sled_groups/templates/sled_groups/group_leave.html
@@ -7,14 +7,16 @@ Leave group
 
 
 {% block content %}
-<div class="{% if form.non_field_errors %}invalid{% endif %}">
-  {% for error in form.non_field_errors %}
-  {{ error }}
-  {% endfor %}
-</div>
+<div class="jb-container">
+  <div class="{% if form.non_field_errors %}invalid{% endif %}">
+    {% for error in form.non_field_errors %}
+    {{ error }}
+    {% endfor %}
+  </div>
 
-<div>
-  Are you sure you want to leave the group named <strong>{{ sledgroup.name }}</strong>?
+  <div>
+    Are you sure you want to leave the group named <strong>{{ sledgroup.name }}</strong>?
+  </div>
 </div>
 {% endblock content %}
 
