--- a/sled_groups/templates/sled_groups/group_update.html
+++ b/sled_groups/templates/sled_groups/group_update.html
@@ -7,15 +7,17 @@ Update group {{ sledgroup.name }}
 
 
 {% block content %}
-<div class="{% if form.non_field_errors %}invalid{% endif %}">
-  {% for error in form.non_field_errors %}
-  {{ error }}
-  {% endfor %}
-</div>
+<div class="jb-container">
+  <div class="{% if form.non_field_errors %}invalid{% endif %}">
+    {% for error in form.non_field_errors %}
+    {{ error }}
+    {% endfor %}
+  </div>
 
-{% for field in form %}
-<div>
-  {{ field }}
+  {% for field in form %}
+  <div>
+    {{ field }}
+  </div>
 </div>
 {% endfor %}
 {% endblock content %}
