--- a/sled_users/templates/sled_users/user_index.html
+++ b/sled_users/templates/sled_users/user_index.html
@@ -45,13 +45,6 @@
       </div>
     </div>
 
-    <div>
-      {% if N_note_unread > 0 %}
-      You have <b>{{ N_note_unread }}</b> new notifications
-      {% endif %}
-      <a href="{% url 'sled_notifications:notifications-list' %}">See all notifications</a>
-    </div>
-    
   </div>
 
   <button type="button" class="jb-submit-button-1" data-form-url="{% url 'sled_users:user-update' user.pk %}">
@@ -59,12 +52,13 @@
     Update
   </button>
 
+  <br></br>
+
   <div>
-    <h1 class="jb-heading-2">New Notifications ({{ N_note_unread }})</h1>
-    <div>
-      {% include "notifications_container.html" with notifications=unread_notifications %}
-      <a href="{% url 'sled_notifications:notifications-list' %}">See all notifications</a>
-    </div>
+    {% if N_note_unread > 0 %}
+    You have <b>{{ N_note_unread }}</b> new notifications
+    {% endif %}
+    <a href="{% url 'sled_notifications:notifications-list' %}">See all notifications</a>
   </div>
 
   <br></br>
@@ -226,29 +220,31 @@
   <div id="lenses">
     <h1 class="jb-heading-2">My Lenses ({{ N_lenses }}) </h1>
 
-    <div>
-      <div>
-        Showing {{ lenses.start_index }} - {{ lenses.end_index }}
-      </div>
-      <div>
-        {% if lenses.has_previous %}
-        <a href="{{ request.path }}?page={{ lenses.number|add:'-1' }}#lenses">Previous</a>
-        {% endif %}
+    <div class="jb-pagination-table">
+      <table>
+        <tr>
+          {% if lenses.has_previous %}
+          <a href="{{ request.path }}?page={{ lenses.number|add:'-1' }}#lenses">Previous </a>
+          {% endif %}
 
-        {% if lenses.has_other_pages %}
-        {% for n in lenses_range %}
-        {% if n == lenses.number %}
-        <a href="{{ request.path }}?page={{ n }}#lenses" style="color:magenta">{{ n }}</a>
-        {% else %}
-        <a href="{{ request.path }}?page={{ n }}#lenses">{{ n }}</a>
-        {% endif %}
-        {% endfor %}
-        {% endif %}
+          {% if lenses.has_other_pages %}
+          {% for n in lenses_range %}
+          {% if n == lenses.number %}
+          <a href="{{ request.path }}?page={{ n }}#lenses" style="color: #BABCEF">{{ n }} </a>
+          {% else %}
+          <a href="{{ request.path }}?page={{ n }}#lenses">{{ n }} </a>
+          {% endif %}
+          {% endfor %}
+          {% endif %}
 
-        {% if lenses.has_next %}
-        <a href="{{ request.path }}?page={{ lenses.number|add:'1' }}#lenses">Next</a>
-        {% endif %}
-      </div>
+          {% if lenses.has_next %}
+          <a href="{{ request.path }}?page={{ lenses.number|add:'1' }}#lenses">Next</a>
+          {% endif %}
+        </tr>
+        <tr>
+          | Showing {{ lenses.start_index }} - {{ lenses.end_index }}
+        </tr>
+      </table>
     </div>
 
     <div>
