--- a/sled_collections/templates/sled_collections/collection_cede_ownership.html
+++ b/sled_collections/templates/sled_collections/collection_cede_ownership.html
@@ -14,11 +14,11 @@ Cede ownership of collection {{ collection.name }}?
   {% endfor %}
 </div>
 
-<div>
+<div class="jb-modal-field">
   {{ form.heir }}
 </div>
 
-<div>
+<div class="jb-modal-field">
   {{ form.justification }}
 </div>
 {% endblock content %}
