--- a/sled_collections/templates/sled_collections/collection_create.html
+++ b/sled_collections/templates/sled_collections/collection_create.html
@@ -21,11 +21,11 @@ Make collection?
     </ul>
   </div>
 
-  <div>
+  <div class="jb-modal-field">
     {{ form.name }}
   </div>
 
-  <div>
+  <div class="jb-modal-field">
     {{ form.description }}
   </div>
 
