--- a/sled_collections/templates/sled_collections/collection_update.html
+++ b/sled_collections/templates/sled_collections/collection_update.html
@@ -14,7 +14,7 @@ Update collection {{ collection.name }}
 </div>
 
 {% for field in form %}
-<div>
+<div class="jb-modal-field">
   {{ field }}
 </div>
 {% endfor %}
