--- a/sled_groups/templates/sled_groups/group_create.html
+++ b/sled_groups/templates/sled_groups/group_create.html
@@ -14,11 +14,11 @@ Create new group?
     {% endfor %}
   </div>
 
-  <div>
+  <div class="jb-modal-field">
     {{ form.name }}
   </div>
 
-  <div>
+  <div class="jb-modal-field">
     {{ form.description }}
   </div>
 
