--- a/sled_users/templates/sled_users/user_visit_card.html
+++ b/sled_users/templates/sled_users/user_visit_card.html
@@ -3,7 +3,6 @@
 
 {% block content %}
 <div class="jb-container">
-
   <div>
     <div class="jb-float-child-1">
       <h1 class="jb-heading-1"> {{ sled_user.first_name }} {{ sled_user.last_name }}</h1>
@@ -11,4 +10,10 @@
     <div class="jb-float-child-2">
       <img src="{% static 'images/JB_User_Icon.png' %}" loading="lazy" width="100" alt="" class="jb-image-2">
     </div>
-    {% endblock content %}
+    <div>
+      {{ sled_user.email }}
+      {{ sled_user.affiliation }}
+    </div>
+  </div>
+</div>
+{% endblock content %}
