--- a/sled_groups/templates/sled_groups/group_update.html
+++ b/sled_groups/templates/sled_groups/group_update.html
@@ -7,7 +7,7 @@ Update group {{ sledgroup.name }}
 
 
 {% block content %}
-<div class="jb-container">
+<div class="jb-container body-div">
   <div class="{% if form.non_field_errors %}invalid{% endif %}">
     {% for error in form.non_field_errors %}
     {{ error }}
@@ -18,8 +18,8 @@ Update group {{ sledgroup.name }}
   <div>
     {{ field }}
   </div>
+  {% endfor %}
 </div>
-{% endfor %}
 {% endblock content %}
 
 
