--- a/templates/notifications_container.html
+++ b/templates/notifications_container.html
@@ -1,6 +1,14 @@
 {% load static %}
 {% load project_tags %}
 
+
+<style>
+  .success_level {
+    color: yellow;
+  }
+</style>
+
+
 {% if notifications %}
 <table class="jb-activity">
   <tbody>
@@ -9,175 +17,175 @@
     {% if N > 0 or note.data.object_names|length > 0 %}
 
     <tr class="sled-notification-row">
-      <td>{{ note.level }}</td>
+      <td class="{{ note.level }}_level">{{ note.level }}</td>
       <td>{{ note.timestamp }}</td>
       <td>
-	{% if note.actor != "admin" %}
-	by <a href="{{ note.actor.get_absolute_url }}" target="_blank">{{ note.actor }}</a>
-	{% else %}
-	by admin
-	{% endif %}
+        {% if note.actor != "admin" %}
+        by <a href="{{ note.actor.get_absolute_url }}" target="_blank">{{ note.actor }}</a>
+        {% else %}
+        by admin
+        {% endif %}
       </td>
       <td>
 
 
 
-	{% if note.verb == "DeleteObjectsAccepted" %}
-	<a href="{{ note.action_object.get_absolute_url }}" target="_blank">Your request</a> to <b>delete public</b> objects was accepted.
-	
-	
-	{% elif note.verb == "DeleteObjectsRejected" %}
+        {% if note.verb == "DeleteObjectsAccepted" %}
+        <a href="{{ note.action_object.get_absolute_url }}" target="_blank">Your request</a> to <b>delete public</b> objects was accepted.
+
+
+        {% elif note.verb == "DeleteObjectsRejected" %}
         <a href="{{ note.action_object.get_absolute_url }}" target="_blank">Your request</a> to <b>delete public</b> objects was rejected.
 
-	
-	{% elif note.verb == "DeleteObjectsPrivate" %}
-	{% if N == 1 %}
-	Private {{ note.data.object_type|get_name_singular }} <b>{{ note.data.object.names.first }}</b> that you had access to was deleted.
-	{% else %}
-	<a class="sled-open-tooltip">{{ note.data.object_names|length }} private {{ note.data.object_type|get_name_plural }}</a> that you had access to were deleted.
-	<div class="sled-notification-tooltip" style="display:none">
-	  <table>
-	    {% for name in note.data.object_names %}
-	    <tr>
-	      <td>name</td>
-	    </tr>
-	    {% endfor %}
-	  </table>
-	</div>
-	{% endif %}
 
-
-	
-
-	{% elif note.verb == "CedeOwnership" %}
-	{% if N == 1 %}
-	Private {{ note.action_object.item_type|get_name_singular }}
-	<a href="{{ note.action_object.myitems.first.get_absolute_url }}" target="_blank">
-	  {{ note.action_object.myitems.first }}
-	</a>
-	{% else %}
-	<a href="{{ note.action_object.get_absolute_url }}" target="_blank">
-	  {{ N }} private {{ note.action_object.item_type|get_name_plural }}
-	</a>
-	{% endif %}
-	that you have access to changed owner from
-	<a href="{{ note.data.previous_owner_url }}" target="_blank">{{ note.data.previous_owner }}</a>
-	to
-	<a href="{{ note.data.next_owner_url }}" target="_blank">{{ note.data.next_owner }}</a>.
-
-	
-	{% elif note.verb == "CedeOwnershipAccepted" %}
-	<a href="{{ note.action_object.get_absolute_url }}" target="_blank">Your request</a> to <b>cede ownership</b> was accepted.
-	
-	
-	{% elif note.verb == "CedeOwnershipRejected" %}
-	<a href="{{ note.action_object.get_absolute_url }}" target="_blank">Your request</a> to <b>cede ownership</b> was rejected.
+        {% elif note.verb == "DeleteObjectsPrivate" %}
+        {% if N == 1 %}
+        Private {{ note.data.object_type|get_name_singular }} <b>{{ note.data.object.names.first }}</b> that you had access to was deleted.
+        {% else %}
+        <a class="sled-open-tooltip">{{ note.data.object_names|length }} private {{ note.data.object_type|get_name_plural }}</a> that you had access to were deleted.
+        <div class="sled-notification-tooltip" style="display:none">
+          <table>
+            {% for name in note.data.object_names %}
+            <tr>
+              <td>name</td>
+            </tr>
+            {% endfor %}
+          </table>
+        </div>
+        {% endif %}
 
 
 
 
-	{% elif note.verb == "MakePrivateAccepted" %}
-	<a href="{{ note.action_object.get_absolute_url }}" target="_blank">Your request</a> to <b>make objects private</b> was accepted.
-	
-	
-	{% elif note.verb == "MakePrivateRejected" %}
-	<a href="{{ note.action_object.get_absolute_url }}" target="_blank">Your request</a> to <b>make objects private</b> was rejected.
-	
-	
-	{% elif note.verb == "MakePublic" %}
-	{% if N == 1 %}
-	Private {{ note.action_object.item_type|get_name_singular }}
-	<a href="{{ note.action_object.myitems.first.get_absolute_url }}" target="_blank">
-	  {{ note.action_object.myitems.first }}
-	</a>
-	that you had access to is
-	{% else %}
-	<a href="{{ note.action_object.get_absolute_url }}" target="_blank">
-	  {{ N }} private {{ note.action_object.item_type|get_name_plural }}
-	</a>
-	that you had access to are
-	{% endif %}
-	now public.
-	
-	
-	
-	
-	{% elif note.verb == "AddedToGroup" %}
-	Your were successfully added to the group <a href="{{ note.action_object.get_absolute_url }}" target="_blank">{{ note.action_object.name }}</a>.
-	
-	
-	{% elif note.verb == "AskToJoinGroupRejected" %}
-	<a href="{{ note.action_object.get_absolute_url }}" target="_blank">Your request</a> to <b>join group</b> <a href="{{ note.data.group_url }}" target="_blank">{{ note.data.group_name }}</a> was rejected.
-
-	
-	{% elif note.verb == "RemovedFromGroup" %}
-	You were removed from the group <a href="{{ note.action_object.get_absolute_url }}" target="_blank">{{ note.action_object.name }}</a>.
-	
-	
-	{% elif note.verb == "DeletedGroup" %}	
-	Group <b>{{ note.data.group_name }}</b> was deleted by <a href="{{ note.data.owner_url }}" target="_blank">{{ note.data.owner_name }}</a>.
-	
-	
-	
-	
-	{% elif note.verb == "GiveAccess" %}
-	You were given access to
-	{% if N == 1 %}
-	private {{ note.action_object.item_type|get_name_singular }}
-	<a href="{{ note.action_object.myitems.first.get_absolute_url }}" target="_blank">
-	  {{ note.action_object.myitems.first }}
-	</a>.
-	{% else %}
-	<a href="{{ note.action_object.get_absolute_url }}" target="_blank">
-	  {{ N }} private {{ note.action_object.item_type|get_name_plural }}
-	</a>.
-	{% endif %}
-
-	
-	{% elif note.verb == "RevokeAccess" %}
-	Your access to
-	{% if N == 1 %}
-	private {{ note.action_object.item_type|get_name_singular }} {{ note.action_object.myitems.first }}
-	{% else %}
-	<a class="sled-open-tooltip" href="">{{ N }} private {{ note.action_object.item_type|get_name_plural }}</a>
-	<div class="sled-notification-tooltip" style="display:none">
-	  <table>
-	    {% for col in note.action_object.myitems.all %}
-	    <tr>
-	      <td>{{ col.name }}</td>
-	    </tr>
-	    {% endfor %}
-	  </table>
-	</div>	{% endif %}
-	was revoked.
+        {% elif note.verb == "CedeOwnership" %}
+        {% if N == 1 %}
+        Private {{ note.action_object.item_type|get_name_singular }}
+        <a href="{{ note.action_object.myitems.first.get_absolute_url }}" target="_blank">
+          {{ note.action_object.myitems.first }}
+        </a>
+        {% else %}
+        <a href="{{ note.action_object.get_absolute_url }}" target="_blank">
+          {{ N }} private {{ note.action_object.item_type|get_name_plural }}
+        </a>
+        {% endif %}
+        that you have access to changed owner from
+        <a href="{{ note.data.previous_owner_url }}" target="_blank">{{ note.data.previous_owner }}</a>
+        to
+        <a href="{{ note.data.next_owner_url }}" target="_blank">{{ note.data.next_owner }}</a>.
 
 
-	
-	{% elif note.verb == "AskPrivateAccessRejected" %}
-	<a href="{{ note.action_object.get_absolute_url }}" target="_blank">Your request</a> to <b>access private objects</b> was accepted.
-	
+        {% elif note.verb == "CedeOwnershipAccepted" %}
+        <a href="{{ note.action_object.get_absolute_url }}" target="_blank">Your request</a> to <b>cede ownership</b> was accepted.
+
+
+        {% elif note.verb == "CedeOwnershipRejected" %}
+        <a href="{{ note.action_object.get_absolute_url }}" target="_blank">Your request</a> to <b>cede ownership</b> was rejected.
 
 
 
-	{% elif note.verb == "RemovedFromCollection" %}
-	{% if N == 1 %}
-	Private objects were removed from Collection <a href="{{ note.action_object.myitems.first.get_absolute_url }}" target="_blank">{{ note.action_object.myitems.first.name }}</a> that you own.
-	{% else %}
-	Private objects were removed from <a class="sled-open-tooltip">{{ N }} Collections</a> that you own.
-	<div class="sled-notification-tooltip" style="display:none">
-	  <table>
-	    {% for col in note.action_object.myitems.all %}
-	    <tr>
-	      <td><a href="{{ col.get_absolute_url }}" target="_blank">{{ col.name }}</a></td>
-	    </tr>
-	    {% endfor %}
-	  </table>
-	</div>
-	{% endif %}
-	
 
-	
-	{% endif %}
+        {% elif note.verb == "MakePrivateAccepted" %}
+        <a href="{{ note.action_object.get_absolute_url }}" target="_blank">Your request</a> to <b>make objects private</b> was accepted.
+
+
+        {% elif note.verb == "MakePrivateRejected" %}
+        <a href="{{ note.action_object.get_absolute_url }}" target="_blank">Your request</a> to <b>make objects private</b> was rejected.
+
+
+        {% elif note.verb == "MakePublic" %}
+        {% if N == 1 %}
+        Private {{ note.action_object.item_type|get_name_singular }}
+        <a href="{{ note.action_object.myitems.first.get_absolute_url }}" target="_blank">
+          {{ note.action_object.myitems.first }}
+        </a>
+        that you had access to is
+        {% else %}
+        <a href="{{ note.action_object.get_absolute_url }}" target="_blank">
+          {{ N }} private {{ note.action_object.item_type|get_name_plural }}
+        </a>
+        that you had access to are
+        {% endif %}
+        now public.
+
+
+
+
+        {% elif note.verb == "AddedToGroup" %}
+        Your were successfully added to the group <a href="{{ note.action_object.get_absolute_url }}" target="_blank">{{ note.action_object.name }}</a>.
+
+
+        {% elif note.verb == "AskToJoinGroupRejected" %}
+        <a href="{{ note.action_object.get_absolute_url }}" target="_blank">Your request</a> to <b>join group</b> <a href="{{ note.data.group_url }}" target="_blank">{{ note.data.group_name }}</a> was rejected.
+
+
+        {% elif note.verb == "RemovedFromGroup" %}
+        You were removed from the group <a href="{{ note.action_object.get_absolute_url }}" target="_blank">{{ note.action_object.name }}</a>.
+
+
+        {% elif note.verb == "DeletedGroup" %}
+        Group <b>{{ note.data.group_name }}</b> was deleted by <a href="{{ note.data.owner_url }}" target="_blank">{{ note.data.owner_name }}</a>.
+
+
+
+
+        {% elif note.verb == "GiveAccess" %}
+        You were given access to
+        {% if N == 1 %}
+        private {{ note.action_object.item_type|get_name_singular }}
+        <a href="{{ note.action_object.myitems.first.get_absolute_url }}" target="_blank">
+          {{ note.action_object.myitems.first }}
+        </a>.
+        {% else %}
+        <a href="{{ note.action_object.get_absolute_url }}" target="_blank">
+          {{ N }} private {{ note.action_object.item_type|get_name_plural }}
+        </a>.
+        {% endif %}
+
+
+        {% elif note.verb == "RevokeAccess" %}
+        Your access to
+        {% if N == 1 %}
+        private {{ note.action_object.item_type|get_name_singular }} {{ note.action_object.myitems.first }}
+        {% else %}
+        <a class="sled-open-tooltip" href="">{{ N }} private {{ note.action_object.item_type|get_name_plural }}</a>
+        <div class="sled-notification-tooltip" style="display:none">
+          <table>
+            {% for col in note.action_object.myitems.all %}
+            <tr>
+              <td>{{ col.name }}</td>
+            </tr>
+            {% endfor %}
+          </table>
+        </div> {% endif %}
+        was revoked.
+
+
+
+        {% elif note.verb == "AskPrivateAccessRejected" %}
+        <a href="{{ note.action_object.get_absolute_url }}" target="_blank">Your request</a> to <b>access private objects</b> was accepted.
+
+
+
+
+        {% elif note.verb == "RemovedFromCollection" %}
+        {% if N == 1 %}
+        Private objects were removed from Collection <a href="{{ note.action_object.myitems.first.get_absolute_url }}" target="_blank">{{ note.action_object.myitems.first.name }}</a> that you own.
+        {% else %}
+        Private objects were removed from <a class="sled-open-tooltip">{{ N }} Collections</a> that you own.
+        <div class="sled-notification-tooltip" style="display:none">
+          <table>
+            {% for col in note.action_object.myitems.all %}
+            <tr>
+              <td><a href="{{ col.get_absolute_url }}" target="_blank">{{ col.name }}</a></td>
+            </tr>
+            {% endfor %}
+          </table>
+        </div>
+        {% endif %}
+
+
+
+        {% endif %}
       </td>
     </tr>
     {% endif %}
