--- a/sled_collections/templates/sled_collections/collection_view_access.html
+++ b/sled_collections/templates/sled_collections/collection_view_access.html
@@ -7,7 +7,7 @@ Items without access per user and group
 
 
 {% block content %}
-<div class="jb-container">
+<div class="jb-modal-field">
   Per user
   <table>
     <thead>
