--- a/sled_collections/templates/sled_collections/collection_cede_ownership.html
+++ b/sled_collections/templates/sled_collections/collection_cede_ownership.html
@@ -8,18 +8,22 @@ Cede ownership of collection {{ collection.name }}?
 {% block content %}
 <input type="hidden" id="Urlusers" data-url="{% url 'api:users-view' %}" />
 
-<div class="{% if form.non_field_errors %}invalid{% endif %}">
-  {% for error in form.non_field_errors %}
-  {{ error }}
-  {% endfor %}
-</div>
-
 <div class="jb-modal-field">
-  {{ form.heir }}
-</div>
 
-<div class="jb-modal-field">
-  {{ form.justification }}
+  <div class="{% if form.non_field_errors %}invalid{% endif %}">
+    {% for error in form.non_field_errors %}
+    {{ error }}
+    {% endfor %}
+  </div>
+
+  <div class="jb-modal-field">
+    {{ form.heir }}
+  </div>
+
+  <div>
+    {{ form.justification }}
+  </div>
+
 </div>
 {% endblock content %}
 
