--- a/sled_collections/templates/sled_collections/collection_make_public.html
+++ b/sled_collections/templates/sled_collections/collection_make_public.html
@@ -7,7 +7,7 @@ Make collection {{ collection.name }} public?
 
 
 {% block content %}
-<div class="jb-container">
+<div class="jb-modal-field">
   <div class="{% if form.non_field_errors %}invalid{% endif %}">
     {% for error in form.non_field_errors %}
     {{ error|safe }}
