--- a/sled_groups/templates/sled_groups/group_add_remove_members.html
+++ b/sled_groups/templates/sled_groups/group_add_remove_members.html
@@ -13,13 +13,13 @@ Remove members from the group
 {% block content %}
 <input type="hidden" id="Urlusers" data-url="{% url 'api:users-view' %}" />
 
-<div class="{% if form.non_field_errors %}invalid{% endif %}">
+<div class="{% if form.non_field_errors %}invalid{% endif %} jb-modal-field">
   {% for error in form.non_field_errors %}
   {{ error }}
   {% endfor %}
 </div>
 
-<div>
+<div class="jb-modal-field">
   {{ form.users }}
 </div>
 {% endblock content %}
