--- a/sled_groups/templates/sled_groups/group_update.html
+++ b/sled_groups/templates/sled_groups/group_update.html
@@ -7,7 +7,7 @@ Update group {{ sledgroup.name }}
 
 
 {% block content %}
-<div class="jb-container body-div">
+<div class="jb-modal-field">
   <div class="{% if form.non_field_errors %}invalid{% endif %}">
     {% for error in form.non_field_errors %}
     {{ error }}
@@ -15,7 +15,7 @@ Update group {{ sledgroup.name }}
   </div>
 
   {% for field in form %}
-  <div>
+  <div class="jb-modal-field">
     {{ field }}
   </div>
   {% endfor %}
