--- a/sled_queries/templates/sled_queries/query_delete.html
+++ b/sled_queries/templates/sled_queries/query_delete.html
@@ -7,7 +7,7 @@ Delete query
 
 
 {% block content %}
-<div>
+<div class="jb-modal-field">
   Are you sure you want to delete the query named <strong>{{ query.name }}</strong>?
 </div>
 {% endblock content %}
