--- a/sled_admin_collections/templates/sled_admin_collections/admin_collection_detail.html
+++ b/sled_admin_collections/templates/sled_admin_collections/admin_collection_detail.html
@@ -1,26 +1,30 @@
 {% extends 'master_header.html' %}
 {% load static %}
 
+
 {% block content %}
-{{ object.pk }}
-<br>
-{{ object.item_type }}
-<br>
-{{ object.created_at }}
-<br>
-Total objects: {{ myitems|length }}.
+</br>
+<div class="jb-container">
+  {{ object.pk }}
+  <br>
+  {{ object.item_type }}
+  <br>
+  {{ object.created_at }}
+  <br>
+  Total objects: {{ myitems|length }}.
 
-<br>
-<br>
+  <br>
+  <br>
 
-<table>
-  {% for obj in myitems %}
-  <tr>
-    <td>
-      <a href="{{ obj.get_absolute_url }}">{{ obj }}</a>
-    </td>
-  </tr>
-{% endfor %}
-</table>
+  <table>
+    {% for obj in myitems %}
+    <tr>
+      <td>
+        <a href="{{ obj.get_absolute_url }}">{{ obj }}</a>
+      </td>
+    </tr>
+    {% endfor %}
+  </table>
+</div>
 
 {% endblock content %}
