--- a/templates/simple_message.html
+++ b/templates/simple_message.html
@@ -1,6 +1,6 @@
 {% extends 'master_header.html' %}
 {% block content %}
-<div class="message">
+<div class=" jb-container message">
   {{ message }}
 </div>
 {% endblock content %}
