--- a/lenses/templates/lenses/lens_give_revoke_access.html
+++ b/lenses/templates/lenses/lens_give_revoke_access.html
@@ -13,23 +13,21 @@ Give access to Users and Groups?
 <input type="hidden" id="Urlusers" data-url="{% url 'api:users-view' %}" />
 <input type="hidden" id="Urlgroups" data-url="{% url 'api:groups-view' %}" />
 
-<div class="{% if form.non_field_errors %}invalid{% endif %}">
+<div class="{% if form.non_field_errors %}invalid{% endif %} jb-modal-field"">
   {% for error in form.non_field_errors %}
   {{ error }}
   {% endfor %}
 </div>
 
-<div>
+<div class=" jb-modal-field">
   {{ form.users }}
 </div>
 
-<br>
-
-<div>
+<div class="jb-modal-field">
   {{ form.groups }}
 </div>
 
-<div>
+<div class="jb-modal-field jb-table-no-lines">
   <table>
     {% for lens in lenses %}
     <tr>
@@ -49,7 +47,7 @@ Give access to Users and Groups?
 
 
 {% block action_button %}
-<button type="submit" class="btn btn-sm btn-danger jb-submit-button-1">
+<button type="submit" class="jb-submit-button-1">
   {% if view.kwargs.mode == 'revoke' %}
   Revoke access
   {% else %}
