--- a/sled_users/templates/sled_users/user_index.html
+++ b/sled_users/templates/sled_users/user_index.html
@@ -10,11 +10,7 @@
   <div>
     <div class="jb-float-child-1">
       <h1 class="jb-heading-1">
-	{{ user.username }}
-        <button type="button" class="sled-modal btn btn-sm btn-primary" data-form-url="{% url 'sled_users:user-update' user.pk %}">
-          <img src="{% static 'icons/pencil.svg' %}" alt="pencil">
-          Update
-        </button>
+        {{ user.username }}
       </h1>
     </div>
     <div class="jb-float-child-2">
@@ -34,7 +30,6 @@
               <th>Affiliation</th>
               <th>Email</th>
               <th>Homepage</th>
-              <th>Info</th>
             </tr>
           </thead>
           <tbody>
@@ -44,6 +39,17 @@
               <td>{{ user.affiliation }}</td>
               <td>{{ user.email }}</td>
               <td><a href="{{ user.homepage }}">{{ user.homepage }}</a></td>
+            </tr>
+          </tbody>
+        </table>
+        <table>
+          <thead>
+            <tr>
+              <th>Info</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
               <td>{{ user.info }}</td>
             </tr>
           </tbody>
@@ -53,7 +59,7 @@
 
   </div>
 
-  <button type="button" class="jb-submit-button-1" data-form-url="{% url 'sled_users:user-update' user.pk %}">
+  <button type="button" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_users:user-update' user.pk %}">
     <img src="{% static 'icons/pencil.svg' %}" alt="pencil">
     Update
   </button>
@@ -312,39 +318,39 @@
 <script type="text/javascript" src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
 <script type="text/javascript" src="{% static 'lenses/js/autocomplete.js' %}"></script>
 <script type="text/javascript">
-  $(document).ready(function(){
-      $(".sled-process-lenses").click(function() {  
-          // Construct get query string
-          var values = [];
-          $('#exe_summary input[type="checkbox"]:checked').each(function() {
-              values.push('ids=' + $(this).val());
-          });
-	  
-          if (values.length == 0) {
-              alert('You need to select at least one item!');
-          } else {
-              var get_str = '?' + values.join('&') + '&';
-	      
-              // Fetch only the first part of the URL (without any GET arguments)
-              var url = $(this).data('form-url').split('?');
-              var url_core = url[0];
-	      
-              // Trigger modal
-              var new_form_url = url_core + get_str;
-              $(this).modalFormTrigger({
-                  formURL: new_form_url,
-                  modalID: "#id-modal"
-              });
-          }
+  $(document).ready(function() {
+    $(".sled-process-lenses").click(function() {
+      // Construct get query string
+      var values = [];
+      $('#exe_summary input[type="checkbox"]:checked').each(function() {
+        values.push('ids=' + $(this).val());
       });
-      
-      // Modals
-      $(".sled-modal").each(function() {
-          $(this).modalForm({
-              formURL: $(this).data("form-url"),
-              modalID: "#id-modal"
-          });
+
+      if (values.length == 0) {
+        alert('You need to select at least one item!');
+      } else {
+        var get_str = '?' + values.join('&') + '&';
+
+        // Fetch only the first part of the URL (without any GET arguments)
+        var url = $(this).data('form-url').split('?');
+        var url_core = url[0];
+
+        // Trigger modal
+        var new_form_url = url_core + get_str;
+        $(this).modalFormTrigger({
+          formURL: new_form_url,
+          modalID: "#id-modal"
+        });
+      }
+    });
+
+    // Modals
+    $(".sled-modal").each(function() {
+      $(this).modalForm({
+        formURL: $(this).data("form-url"),
+        modalID: "#id-modal"
       });
+    });
   });
 </script>
 {% endblock extrascripts %}
