--- a/sled_tasks/templates/sled_tasks/task_detail_recipient.html
+++ b/sled_tasks/templates/sled_tasks/task_detail_recipient.html
@@ -1,78 +1,84 @@
-{% extends 'master_header.html' %}
-{% block content %}
-<div class="content container">
-  
-  {% if task.status == "P" %}
-  <p style="font-weight:bold;color:red">
+{% extends "modal_base.html" %}
+
+{% block title %}
+{% if task.status == "P" %}
+<span style="font-weight:bold;color:red">
     Pending
-  </p>
-  {% else %}
-  <p style="font-weight:bold;color:green">
-    Completed
-  </p>
-  {% endif %}
+</span>
+{% else %}
+<span style="font-weight:bold;color:green">
+  Completed
+</span>
+{% endif %}
+{% endblock title %}
 
-  <p class="title">Task type: <span class="highlight">{{task.task_type}}</span></p>
+
+
+{% block content %}
   
-  {% if db_response.response %}
-  <p style="font-weight:bold">
-    You have responded to this task at: {{ db_response.created_at }}
-  </p>
-  {% endif %}
+<p class="title">Task type: <span class="highlight">{{task.task_type}}</span></p>
+
+{% if db_response.response %}
+<p style="font-weight:bold">
+  You have responded to this task at: {{ db_response.created_at }}
+</p>
+{% endif %}
+
+<div class="task_description">
   
-  <div class="task_description">
-    
-    {% if comment %}    
-    <p>User <span style="font-weight:bold">{{task.owner.username}}</span> is saying:</p>
-    <div class="sender_comment">
-      &ldquo;{{ comment }}&rdquo;
-    </div>
-    {% endif %}
-    
-    
-    {% if comment %}    
-
-    {% if task.task_type == "CedeOwnership" %}
-    <p>and would like to cede the ownership of the following <span style="font-weight:bold">{{object_type}}</span> to you:</p>
-    {% elif task.task_type == "MakePrivate" %}
-    <p>and would like to make the following <span style="font-weight:bold">{{object_type}}</span> private:</p>    
-    {% endif %}
-    
-    {% else %}
-
-    {% if task.task_type == "CedeOwnership" %}
-    <p>User <span style="font-weight:bold">{{task.owner.username}}</span> would like to cede the ownership of the following <span style="font-weight:bold">{{object_type}}</span> to you:</p>
-    {% elif task.task_type == "MakePrivate" %}
-    <p>User <span style="font-weight:bold">{{task.owner.username}}</span> would like to make the following <span style="font-weight:bold">{{object_type}}</span> private:</p>
-    {% endif %}
-
-    {% endif %}
-
+  {% if comment %}    
+  <p>User <span style="font-weight:bold">{{task.owner.username}}</span> is saying:</p>
+  <div class="sender_comment">
+    &ldquo;{{ comment }}&rdquo;
   </div>
-  
-  <table>
-    {% for obj in objects %}
-    <tr>
-      <td><a href="{{ obj.get_absolute_url }}" target="_blank">{{ obj }}</a></td>
-    </tr>
-    {% endfor %}    
-  </table>
-
-  {% if task.task_type == "CedeOwnership" %}
-  <p>Would you like to accept or refuse taking up the ownership?</p>
-  {% elif task.task_type == "MakePrivate" %}
-  <p>Do you authorize this action?</p>
   {% endif %}
   
-  <form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="hidden" name="task_id" value="{{task.id}}">
-    {% if not db_response.response %}
-    <input type="submit" value="Submit">
-    {% endif %}
-  </form>
+  
+  {% if comment %}    
+  
+  {% if task.task_type == "CedeOwnership" %}
+  <p>and would like to cede the ownership of the following <span style="font-weight:bold">{{object_type}}</span> to you:</p>
+  {% elif task.task_type == "MakePrivate" %}
+  <p>and would like to make the following <span style="font-weight:bold">{{object_type}}</span> private:</p>    
+  {% endif %}
+  
+  {% else %}
+  
+  {% if task.task_type == "CedeOwnership" %}
+  <p>User <span style="font-weight:bold">{{task.owner.username}}</span> would like to cede the ownership of the following <span style="font-weight:bold">{{object_type}}</span> to you:</p>
+  {% elif task.task_type == "MakePrivate" %}
+  <p>User <span style="font-weight:bold">{{task.owner.username}}</span> would like to make the following <span style="font-weight:bold">{{object_type}}</span> private:</p>
+  {% endif %}
+  
+  {% endif %}
   
 </div>
+
+<table>
+  {% for obj in objects %}
+  <tr>
+    <td><a href="{{ obj.get_absolute_url }}" target="_blank">{{ obj }}</a></td>
+  </tr>
+  {% endfor %}    
+</table>
+
+{% if task.task_type == "CedeOwnership" %}
+<p>Would you like to accept or refuse taking up the ownership?</p>
+{% elif task.task_type == "MakePrivate" %}
+<p>Do you authorize this action?</p>
+{% endif %}
+
+
+{% for field in form %}
+<input type="hidden" name="task_id" value="{{ task.id }}">
+<div>
+  {{ field }}
+</div>
+{% endfor %}
+
+{% if not form.response.value %}
+<input type="submit" value="Submit">
+{% endif %}
+
 
 {% endblock content %}
