Added funcionality for papers: upload via the API, display in user profile page and paper detail page (from where the paper can be also deleted). To do: Add papers in lens detail page, fix the paper query page, add a list-view for the paper owner.

--- a/sled_users/templates/sled_users/user_index.html
+++ b/sled_users/templates/sled_users/user_index.html
@@ -108,7 +108,27 @@
     {% endfor %}
   </table>
 
+  <div>
+    <h1 class="jb-heading-2">My Papers ({{N_papers}})</h1>
+    <div>
+      {% if N_papers %}
+      <table>
+        <tbody>
+          {% for paper in papers %}
+          <tr>
+            <td><a href="{% url 'sled_papers:paper-detail' pk=paper.pk %}">{{paper.cite_as}}</td>
+            <td>{{paper.title}}</td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+      {% else %}
+      <p>No papers to display</p>
+      {% endif %}
+    </div>
+  </div>
 
+  
   <div>
     <h1 class="jb-heading-2">My Groups ({{N_groups}})</h1>
     <div>
